# digital_signal_generator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
functions/: CMakeLists.txt  functions_interface.h  rectangle.cc  rectangle.h  sinus.cc  sinus.h  triangle.cc  triangle.h
hal/: CMakeLists.txt  uart.cc  uart.h
